port to FreeBSD and OpenBSD

--- a/configure.ac
+++ b/configure.ac
@@ -106,7 +106,7 @@ AC_CHECK_HEADERS([machine/apm_bios.h machine/apmvar.h])
 AC_CHECK_HEADERS([netdb.h netinet/in.h])
 AC_CHECK_HEADERS([sched.h sndfile.h stddef.h stdlib.h string.h])
 AC_CHECK_HEADERS([sys/dkstat.h sys/file.h sys/ioctl.h sys/param.h])
-AC_CHECK_HEADERS([sys/socket.h sys/soundcard.h sys/sysctl.h sys/time.h])
+AC_CHECK_HEADERS([sys/sched.h sys/socket.h sys/soundcard.h sys/sysctl.h sys/time.h])
 AC_CHECK_HEADERS([unistd.h uvm/uvm_param.h wchar.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
@@ -135,7 +135,7 @@ AC_CHECK_FUNCS([mblen memchr memmove memset mkdir nl_langinfo])
 AC_CHECK_FUNCS([select setlocale socket])
 AC_CHECK_FUNCS([strcasecmp strchr strcspn strdup strerror strncasecmp])
 AC_CHECK_FUNCS([strrchr strsignal strspn strstr strtol strtoul])
-AC_CHECK_FUNCS([sysctlbyname sysinfo uname wordexp])
+AC_CHECK_FUNCS([sysctl sysctlbyname sysinfo uname wordexp])
 AC_CHECK_FUNC([getloadavg],[AC_DEFINE([HAVE_GETLOADAVG2], 1, [getloadavg() is available])])
 AC_FUNC_SELECT_ARGTYPES
 
