Align the use of xgettext in cmake with autoconf
Or mostly so, a minor difference in the header remains, see comments.
The merge of .po files is also not working, to be continued...

--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -11,12 +11,15 @@ find_program(xgettext xgettext)
 find_program(msgmerge msgmerge)
 find_program(msgfmt msgfmt)
 
+set(COPYRIGHT_HOLDER "Marko Macek <Marko.Macek@gmx.net>")
+set(BUG_ADDRESS "https://github.com/bbidulock/icewm/issues")
+
 if(gettext AND xgettext AND msgmerge AND msgfmt)
-	# source files, read-only!
-	FILE(GLOB SRCS "${CMAKE_SOURCE_DIR}/src/*.cc" "${CMAKE_SOURCE_DIR}/src/fdomenugen.h")
+	file (STRINGS "POTFILES.in" SRCS)
+	# grrr, for make dependency the path needs to match the perspective from the po/ directory.
+	# FIXME, how to simplify? Use abs.path for now
 	foreach(_src ${SRCS})
-		get_filename_component(_src "${_src}" NAME)
-		LIST(APPEND SRCSRELATIVE "src/${_src}")
+		LIST(APPEND SRCSABSOLUTE "${CMAKE_SOURCE_DIR}/${_src}")
 	endforeach()
 	FILE(GLOB POS "${CMAKE_CURRENT_SOURCE_DIR}/*.po")
 	foreach(_src ${POS})
@@ -24,13 +27,13 @@ if(gettext AND xgettext AND msgmerge AND msgfmt)
 		LIST(APPEND LANGUAGES ${_src})
 	endforeach()
 
-	#message("langs: ${LANGUAGES}")
-	SET(XGETTEXT_CMD xgettext --from-code=UTF-8 -language=CXX --add-comments=TRANSLATORS: --keyword=_ --keyword=N_ -s --package-name=${PACKAGE} --package-version=${VERSION})
-  SET(_potFile "${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE}.pot")
+	SET(XGETTEXT_CMD xgettext --from-code=UTF-8 -language=CXX --add-comments=TRANSLATORS: --keyword=_ --keyword=N_ -s --package-name=${PACKAGE} --copyright-holder="${COPYRIGHT_HOLDER}"  --package-version="${VERSION}" --msgid-bugs-address="${BUG_ADDRESS}" )
+	SET(_potFile "${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE}.pot")
 
+	# XXX: it "escapes" spaces in arguments no matter how they are quoted. Find a workaround!
 	ADD_CUSTOM_COMMAND(OUTPUT stamp-potfile
-		COMMAND ${XGETTEXT_CMD} -o "${_potFile}" ${SRCSRELATIVE}
-		DEPENDS ${SRCS}
+		COMMAND ${XGETTEXT_CMD} -o "${_potFile}" ${SRCS}
+		DEPENDS ${SRCSABSOLUTE}
 		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 		COMMENT "Extracting translatable messages to ${_potFile} -- may require config restart!")
 	ADD_CUSTOM_TARGET(update_pot DEPENDS stamp-potfile)
