install icons/icewm_32x32.png

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -47,6 +47,7 @@ nobase_dist_pkgdata_DATA = \
 	icons/help_16x16.xpm \
 	icons/help_32x32.xpm \
 	icons/icewm_16x16.png \
+	icons/icewm_32x32.png \
 	icons/java_16x16.xpm \
 	icons/java_32x32.xpm \
 	icons/kde_16x16.xpm \
