Check sndfile.h with audio_flags.
Use the CFLAGS returned by pkg-config for libsndfile. Otherwise,
sndfile.h is not found when in a non-standard location (such as
/usr/pkg in pkgsrc), and building icesound fails.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,7 +158,6 @@ CHECK_INCLUDE_FILE_CXX(limits.h HAVE_LIMITS_H)
 CHECK_INCLUDE_FILE_CXX(locale.h HAVE_LOCALE_H)
 CHECK_INCLUDE_FILE_CXX(netdb.h HAVE_NETDB_H)
 CHECK_INCLUDE_FILE_CXX(netinet/in.h HAVE_NETINET_IN_H)
-CHECK_INCLUDE_FILE_CXX(sndfile.h HAVE_SNDFILE_H)
 CHECK_INCLUDE_FILE_CXX(stddef.h HAVE_STDDEF_H)
 CHECK_INCLUDE_FILE_CXX(stdlib.h HAVE_STDLIB_H)
 CHECK_INCLUDE_FILE_CXX(string.h HAVE_STRING_H)
@@ -379,6 +378,7 @@ if(sndfile_FOUND)
 
     string(REPLACE ";" " " audio_flags "${audio_flags}")
 endif(sndfile_FOUND)
+CHECK_INCLUDE_FILE_CXX(sndfile.h HAVE_SNDFILE_H ${audio_flags})
 
 option(XINERAMA "Define to enable Xinerama support" on)
 if(XINERAMA)
