Drop support for EsounD.

--- a/configure.ac
+++ b/configure.ac
@@ -254,8 +254,8 @@ then
 fi
 
 AC_ARG_WITH([icesound],
-    AC_HELP_STRING([--with-icesound=INTERFACES],[List of audio interfaces for icesound. @<:@default: ALSA,AO,OSS,ESD@:>@]),[],
-    [with_icesound='ALSA,AO,OSS,ESD'])
+    AC_HELP_STRING([--with-icesound=INTERFACES],[List of audio interfaces for icesound. @<:@default: ALSA,AO,OSS@:>@]),[],
+    [with_icesound='ALSA,AO,OSS'])
 
 for iface in `echo "$with_icesound"|sed 's|,| |g'` ; do
     case $iface in
@@ -280,19 +280,12 @@ for iface in `echo "$with_icesound"|sed 's|,| |g'` ; do
             AC_DEFINE([ENABLE_OSS],[1],[Define to enable OSS support.])
             CONFIG_OSS=yes],[AC_MSG_WARN([OSS is not supported])])
         ;;
-    (ESound|ESD|esound|esd)
-        PKG_CHECK_MODULES([ESD],[esound],[
-            AUDIO_CFLAGS="$AUDIO_CFLAGS $ESD_CFLAGS"
-            AUDIO_LIBS="$AUDIO_LIBS $ESD_LIBS"
-            AC_DEFINE([ENABLE_ESD],[1],[Define to enable ESD support.])
-            CONFIG_ESD=yes],[AC_MSG_NOTICE([ESD is not supported])])
-        ;;
     (*)
         AC_MSG_WARN([Invalid audio interface: $iface])
         ;;
     esac
 done
-for iface in ALSA AO OSS ESD; do
+for iface in ALSA AO OSS; do
     eval "test \"\$CONFIG_$iface\" = yes" && audio_support="$audio_support $iface"
 done
 if test "x$audio_support" != x ; then
