No longer build icewmtray by default.

--- a/configure.ac
+++ b/configure.ac
@@ -375,6 +375,7 @@ AC_SUBST([IMAGE_LIBS])
 AM_CONDITIONAL([BUILD_TESTS],[test x$BUILD_TESTS = xyes])
 AM_CONDITIONAL([BUILD_SOUND],[test x$BUILD_SOUND = xyes])
 AM_CONDITIONAL([BUILD_MENU_FDO],[test x$BUILD_MENU_FDO = xyes])
+AM_CONDITIONAL([BUILD_ICEWMTRAY],[test x$BUILD_ICEWMTRAY = xyes])
 
 test "x$prefix" = xNONE && prefix="$ac_default_prefix"
 
