[cmake] Make check of mandatory X libs strict

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,7 +67,6 @@ option(CONFIG_GDK_PIXBUF_XLIB "GDK-PIXBUF based image loader" off)
 option(CONFIG_LIBRSVG "(Optional) SVG image loader" off)
 option(CONFIG_XPM "(Optional) XPM image loader" on)
 option(CONFIG_I18N "Define to enable internationalization" on)
-option(CONFIG_RENDER "Define to enable XRENDER extension" on)
 option(CONFIG_XRANDR "Define to enable XRANDR extension" on)
 option(CONFIG_SESSION "Define to enable X session management" on)
 option(CONFIG_EXTERNAL_TRAY "Define for external systray (unsupported)" off)
@@ -189,10 +188,10 @@ CHECK_TYPE_SIZE(short SIZEOF_SHORT)
 #########################################################
 
 pkg_check_modules(fontconfig fontconfig)
-pkg_check_modules(xrender xrender)
-pkg_check_modules(xcomposite xcomposite)
-pkg_check_modules(xdamage xdamage)
-pkg_check_modules(xfixes xfixes)
+pkg_check_modules(xrender REQUIRED xrender)
+pkg_check_modules(xcomposite REQUIRED xcomposite)
+pkg_check_modules(xdamage REQUIRED xdamage)
+pkg_check_modules(xfixes REQUIRED xfixes)
 pkg_check_modules(xext xext)
 pkg_check_modules(x11 x11)
 
@@ -272,8 +271,7 @@ endif()
 if(CONFIG_LIBJPEG)
     pkg_check_modules(libjpeg libjpeg)
     if(NOT libjpeg_FOUND)
-        message(FATAL_ERROR "JPEG image loader selected but libjpeg dev files not found.
-${HINT_IMG_LOADERS}")
+        message(FATAL_ERROR "JPEG image loader selected but libjpeg dev files not found. Please install libjpeg-dev (or similar) or use -DCONFIG_LIBJPEG=off.")
     endif()
     LIST(APPEND icewm_img_libs ${libjpeg_LDFLAGS})
 endif()
@@ -387,7 +385,7 @@ if(CONFIG_FDO_MENUS)
     pkg_check_modules(gio gio-2.0 gio-unix-2.0)
     if(NOT gio_FOUND)
         set(CONFIG_FDO_MENUS off)
-        message(WARNING "Freedesktop style menus not supported")
+        message(WARNING "Freedesktop style menus not supported (libglib2.0-dev or similar package required)")
     endif()
 endif()
 
