Always use XTERMCMD in place of xterm to remove hard dependency on xterm for issue #379.

--- a/configure.ac
+++ b/configure.ac
@@ -408,7 +408,7 @@ AC_DEFINE_UNQUOTED([CONFIG_DEFAULT_THEME],
                    "${with_theme}",[Name of default theme])
 AC_ARG_WITH([xterm],
     AC_HELP_STRING([--with-xterm=xterm],[Default X11 terminal emulator for X11]),
-    [AC_DEFINE_UNQUOTED([XTERMCMD],"$with_xterm",[Name of terminal emulator.])])
+    [AC_DEFINE_UNQUOTED([XTERMCMD],${with_xterm},[Name of terminal emulator.])])
 
 AC_DEFINE_UNQUOTED([HOSTOS],["${host_os}"],
 	[Define to the host operating system.])
