--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -101,6 +101,7 @@ $(icewm_man1_htmls) $(extra_man1_htmls): %.1.html: %.pod
 	$(SED) -i -r \
 		-e 's,http://man.he.net/man(.)/(ice[^"]*),\2.\1.html,g' \
 		-e 's,man.he.net/man(.)/([^"]*),manned.org/\2.\1,g' \
+		-e 's,\@CFGDIR\@,$(CFGDIR),g' \
 		-e 's,http:,https:,g' $@
 
 $(icewm_man5_htmls): %.5.html: %.pod
@@ -120,6 +121,7 @@ $(icewm_man5_htmls): %.5.html: %.pod
 	$(SED) -i -r \
 		-e 's,http://man.he.net/man(.)/(ice[^"]*),\2.\1.html,g' \
 		-e 's,man.he.net/man(.)/([^"]*),manned.org/\2.\1,g' \
+		-e 's,\@CFGDIR\@,$(CFGDIR),g' \
 		-e 's,http:,https:,g' $@
 
 $(icewm_man1_files) $(extra_man1_files): %.man: %.pod
@@ -133,7 +135,8 @@ $(icewm_man1_files) $(extra_man1_files): %.man: %.pod
 		--nourls \
 		--release="$(PACKAGE) $(VERSION)" \
 		--section="1" \
-		$< $@
+		$< $@ && \
+	$(SED) -i -r -e 's,\@CFGDIR\@,$(CFGDIR),g' $@
 
 $(icewm_man5_files): %.man: %.pod
 	$(AM_V_GEN)pod2man --center="Standards, Environments and Macros" \
@@ -146,5 +149,6 @@ $(icewm_man5_files): %.man: %.pod
 		--nourls \
 		--release="$(PACKAGE) $(VERSION)" \
 		--section="5" \
-		$< $@
+		$< $@ && \
+	$(SED) -i -r -e 's,\@CFGDIR\@,$(CFGDIR),g' $@
 
