Set PACKAGE_URL. Drop icewmtray and KDEDIR. Substitute LIBDIR, CFGDIR and XTERMCMD.

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,9 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([icewm],[1.6.1],[https://github.com/bbidulock/icewm/issues])
+AC_INIT([icewm],[1.6.1.42],
+        [https://github.com/bbidulock/icewm/issues],
+        [icewm],[https://ice-wm.org])
 AC_REVISION([1.6.1])
 AC_CONFIG_SRCDIR([src/ysmapp.cc])
 AC_CONFIG_HEADERS([config.h])
@@ -17,7 +19,7 @@ AC_SUBST([DATE])
 BRANCH='icewm-1-4-BRANCH'
 AC_SUBST([BRANCH])
 
-APPLICATIONS='icewm icewm-session icesh icewmhint icewmbg icewmtray icehelp'
+APPLICATIONS='icewm icewm-session icesh icewmhint icewmbg icehelp'
 TESTCASES=`echo src/test*.cc | sed 's%src/\([[^ ]]*\)\.cc%\1%g'`
 TESTCASES="$TESTCASES iceview icesame iceicon icerun icelist icebar" # iceclock
 features=''
@@ -380,6 +382,7 @@ fi
 ICE_EXPAND([LIBDIR],[${with_libdir}])
 AC_DEFINE_UNQUOTED([LIBDIR],["${LIBDIR}"],
 	[Define to package data directory.])
+AC_SUBST([LIBDIR])
 
 AC_ARG_WITH([cfgdir],
     AC_HELP_STRING([--with-cfgdir=PATH],[Package configuration directory.
@@ -390,6 +393,7 @@ fi
 ICE_EXPAND([CFGDIR],[${with_cfgdir}])
 AC_DEFINE_UNQUOTED([CFGDIR],["${CFGDIR}"],
 	[Define to package configuration directory.])
+AC_SUBST([CFGDIR])
 
 AC_ARG_WITH([docdir],
     AC_HELP_STRING([--with-docdir=PATH],[Package documentation directory.
@@ -412,8 +416,10 @@ AC_ARG_WITH([theme],
 AC_DEFINE_UNQUOTED([CONFIG_DEFAULT_THEME],
                    "${with_theme}",[Name of default theme])
 AC_ARG_WITH([xterm],
-    AC_HELP_STRING([--with-xterm=xterm],[Default X11 terminal emulator for X11]),
-    [AC_DEFINE_UNQUOTED([XTERMCMD],${with_xterm},[Name of terminal emulator.])])
+    AC_HELP_STRING([--with-xterm=xterm],[Default X11 terminal emulator.]),
+        [],[with_xterm=xterm])
+AC_SUBST([XTERMCMD],[${with_xterm}])
+AC_DEFINE_UNQUOTED([XTERMCMD],[${with_xterm}],[Name of terminal emulator.])
 
 AC_DEFINE_UNQUOTED([HOSTOS],["${host_os}"],
 	[Define to the host operating system.])
@@ -466,9 +472,9 @@ ICE_MSG_VALUE([       BINDIR], bindir)
 ICE_MSG_VALUE([       LOCDIR], localedir)
 ICE_MSG_VALUE([       LIBDIR], LIBDIR)
 ICE_MSG_VALUE([       CFGDIR], CFGDIR)
-ICE_MSG_VALUE([       KDEDIR], kdedatadir)
 ICE_MSG_VALUE([       DOCDIR], DOCDIR)
 ICE_MSG_VALUE([       MANDIR], mandir)
+ICE_MSG_VALUE([       XTERMCMD], XTERMCMD)
 AC_MSG_RESULT([])
 
 # vim: set ft=config sw=4:
